name:                clapi-hs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/clapi-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Map.Mos
                     , Data.Map.Clapi
                     , Parsing
                     , Path
                     , Path.Parsing
                     , Pipeline
                     , Serialisation
                     , Server
                     , Types
                     , Tree
                     , Validator
                     , Valuespace
                     , Util
  other-modules:       Data.Maybe.Clapi
                     , Data.Map.Mol
                     , Data.Map.ChainMap
  build-depends:       base >= 4.7 && < 5
                     , async
                     , attoparsec
                     , attoparsec-binary
                     , blaze-builder
                     , bytestring
                     , containers >= 0.5.8.1
                     , data-binary-ieee754
                     , errors
                     , lens
                     , network
                     , network-simple
                     , pipes
                     , pipes-concurrency
                     , pipes-network
                     , pipes-safe
                     , regex-pcre
                     , scientific
                     , split
                     , text
                     , stm
                     , utf8-string
  default-language:    Haskell2010

executable clapi-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , async
                     , clapi-hs
                     , network
                     , network-simple
                     , unix
  default-language:    Haskell2010

test-suite clapi-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , async
                     , containers
                     , clapi-hs
                     , either
                     , HUnit
                     , network
                     , network-simple
                     , pipes
                     , pipes-safe
                     , QuickCheck
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
                     , text
  other-modules:       Util
                     , TestPipeline
                     , TestServer
                     , TestTree
                     , TestTypes
                     , TestValidator
                     , TestValuespace
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ch3pjw/clapi-hs.git
