name:                clapi-hs
version:             0.1.0.0
synopsis:            Concert API stuff
description:         Please see README.md
homepage:            https://github.com/concert/clapi#readme
license:             GPL-3
license-file:        LICENSE
author:              Paul Weaver
maintainer:          paul@concertdaw.co.uk
copyright:           2016 Concert Audio Technologies
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Map.Mos
                     , Data.Map.Mol
                     , Data.Map.Clapi
                     , Clapi.Attributor
                     , Clapi.SerialisationProtocol
                     , Clapi.Protocol
                     , Clapi.NamespaceTracker
                     , Clapi.PerClientProto
                     , Clapi.Relay
                     , Clapi.RelayApi
                     , Clapi.Serialisation
                     , Clapi.Serialisation.Base
                     , Clapi.Serialisation.Definitions
                     , Clapi.Serialisation.Messages
                     , Clapi.Serialisation.Path
                     , Clapi.Serialisation.Wire
                     , Clapi.Server
                     , Clapi.TaggedData
                     , Clapi.TextSerialisation
                     , Clapi.TH
                     , Clapi.TimeDelta
                     , Clapi.Types
                     , Clapi.Types.AssocList
                     , Clapi.Types.Base
                     , Clapi.Types.Definitions
                     , Clapi.Types.Digests
                     , Clapi.Types.Dkmap
                     , Clapi.Types.Messages
                     , Clapi.Types.SequenceOps
                     , Clapi.Types.Path
                     , Clapi.Types.Tree
                     , Clapi.Types.TreeTypeProxy
                     , Clapi.Types.Wire
                     , Clapi.Types.WireTH
                     , Clapi.Types.UniqList
                     , Clapi.Tree
                     , Clapi.Validator
                     , Clapi.Valuespace
                     , Clapi.Util
  other-modules:       Data.Maybe.Clapi
  build-depends:       base >= 4.7 && < 5
                     , async
                     , attoparsec
                     , attoparsec-binary
                     , bimap
                     , blaze-builder
                     , bytestring
                     , clock
                     , containers >= 0.5.8.1
                     , data-binary-ieee754
                     , either
                     , errors
                     , free
                     , network
                     , network-simple
                     , mtl
                     , regex-pcre
                     , scientific
                     , split
                     , stm
                     , template-haskell
                     , th-lift
                     , th-lift-instances
                     , text
                     , unagi-chan
                     , utf8-string
  default-language:    Haskell2010

executable clapi-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , async
                     , base16-bytestring
                     , clapi-hs
                     , containers
                     , cryptohash-sha256
                     , mtl
                     , network
                     , network-simple
                     , text
                     , unix
                     , utf8-string
  default-language:    Haskell2010

test-suite clapi-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , attoparsec
                     , bytestring
                     , blaze-builder
                     , async
                     , containers
                     , clapi-hs
                     , either
                     , hspec
                     , hspec-expectations
                     , mtl
                     , network
                     , network-simple
                     , QuickCheck
                     , random
                     , text
                     , transformers
                     , unagi-chan
  other-modules:       Helpers
                     , Data.Map.MosSpec
                     , SerialisationProtocolSpec
                     , PathSpec
                     , ProtocolSpec
                     , NamespaceTrackerSpec
                     , RelaySpec
                     , ServerSpec
                     , SerialisationSpec
                     , TextSerialisationSpec
                     , TreeSpec
                     , TypesSpec
                     , UtilSpec
                     , ValidatorSpec
                     , ValuespaceSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ch3pjw/clapi-hs.git
