name:                clapi-hs
version:             0.1.0.0
synopsis:            Concert API stuff
description:         Please see README.md
homepage:            https://github.com/concert/clapi#readme
license:             GPL-3
license-file:        LICENSE
author:              Paul Weaver
maintainer:          paul@concertdaw.co.uk
copyright:           2016 Concert Audio Technologies
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Werror=missing-methods
  default-extensions:
                       PatternSynonyms
                     , QuasiQuotes
                     , ScopedTypeVariables
                     , TupleSections
                     , TypeApplications
                     , ViewPatterns
  exposed-modules:     Data.Map.Mos
                     , Data.Map.Mol
                     , Data.Map.Clapi
                     , Data.Map.Dependencies
                     , Clapi.Attributor
                     , Clapi.Internal.Valuespace
                     , Clapi.Internal.Wire
                     , Clapi.SerialisationProtocol
                     , Clapi.Protocol
                     , Clapi.PerClientProto
                     , Clapi.Relay
                     , Clapi.RelayApi
                     , Clapi.Serialisation
                     , Clapi.Serialisation.Base
                     , Clapi.Serialisation.Definitions
                     , Clapi.Serialisation.Digests
                     , Clapi.Serialisation.Path
                     , Clapi.Serialisation.Wire
                     , Clapi.Server
                     , Clapi.TaggedData
                     , Clapi.TextSerialisation
                     , Clapi.TH
                     , Clapi.TimeDelta
                     , Clapi.Types
                     , Clapi.Types.AssocList
                     , Clapi.Types.Base
                     , Clapi.Types.Definitions
                     , Clapi.Types.Digests
                     , Clapi.Types.Dkmap
                     , Clapi.Types.EnumVal
                     , Clapi.Types.Nat
                     , Clapi.Types.SequenceOps
                     , Clapi.Types.Symbol
                     , Clapi.Types.SymbolList
                     , Clapi.Types.Path
                     , Clapi.Types.Tree
                     , Clapi.Types.Wire
                     , Clapi.Types.WireTH
                     , Clapi.Types.UniqList
                     , Clapi.Tree
                     , Clapi.Validator
                     , Clapi.Valuespace
                     , Clapi.Util
  other-modules:       Data.Maybe.Clapi
  build-depends:       base >= 4.7 && < 5
                     , async
                     , attoparsec
                     , attoparsec-binary
                     , attoparsec-varword
                     , bimap
                     , blaze-builder
                     , bytestring
                     , bytestring-builder-varword
                     , clock
                     , constraints
                     , containers
                     , data-binary-ieee754
                     , either
                     , errors
                     , free
                     , lens
                     , network
                     , network-simple
                     , mtl
                     , regex-pcre
                     , scientific
                     , split
                     , stm
                     , tagged
                     , template-haskell
                     , th-lift
                     , th-lift-instances
                     , text
                     , unagi-chan
                     , utf8-string
  default-language:    Haskell2010

executable clapi-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror=missing-methods
  build-depends:       base
                     , async
                     , base16-bytestring
                     , clapi-hs
                     , containers
                     , cryptohash-sha256
                     , mtl
                     , network
                     , network-simple
                     , text
                     , unix
                     , utf8-string
  default-language:    Haskell2010

test-suite clapi-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -Wall -Werror=missing-methods
  default-extensions:
                       PatternSynonyms
                     , QuasiQuotes
                     , ScopedTypeVariables
                     , TupleSections
                     , TypeApplications
                     , ViewPatterns
  build-depends:       base
                     , attoparsec
                     , bytestring
                     , blaze-builder
                     , async
                     , constraints
                     , containers
                     , clapi-hs
                     , either
                     , hspec
                     , hspec-expectations
                     , mtl
                     , multiset
                     , network
                     , network-simple
                     , QuickCheck
                     , random
                     , tagged
                     , template-haskell
                     , text
                     , transformers
                     , unagi-chan
  other-modules:       Helpers
                     , Data.Map.DependenciesSpec
                     , Data.Map.MosSpec
                     , Arbitrary
                     , Instances
                     , SerialisationProtocolSpec
                     , PathSpec
                     , ProtocolSpec
                     , RelaySpec
                     , ServerSpec
                     , SerialisationSpec
                     , TextSerialisationSpec
                     , TreeSpec
                     , UtilSpec
                     , ValidatorSpec
                     , ValuespaceSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ch3pjw/clapi-hs.git
